java 11기준으로 .toList() -> .collect(Collectors.toList()) 수정.